Add Paola's photo

--- a/public/index.html
+++ b/public/index.html
@@ -8,35 +8,22 @@
     <title>Tim&nbsp;&amp;&nbsp;Irina's Wedding</title>
 
     <link rel="icon" href="images/favicon.jpg">
-
-    <!--build:css main.min.css -->
     <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" /> -->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
     <!-- Pace -->
-    <!-- <link rel="stylesheet" href="css/preloader.css" media="screen"> -->
-    <!-- <link rel="stylesheet" href="css/preloader-default.css" media="screen"> -->
+    <link rel="stylesheet" href="css/preloader.css" media="screen">
+    <link rel="stylesheet" href="css/preloader-default.css" media="screen">
     <!-- Flexslider -->
-    <!-- <link rel="stylesheet" href="css/flexslider/flexslider.css" type="text/css"> -->
+    <link rel="stylesheet" href="css/flexslider/flexslider.css" type="text/css">
     <!-- Animate -->
-    <!-- <link rel="stylesheet" href="css/animate/animate.css" type="text/css"> -->
+    <link rel="stylesheet" href="css/animate/animate.css" type="text/css">
     <!-- Countdown -->
-    <!-- <link rel="stylesheet" href="css/countdown/jquery.countdown.css" type="text/css"> -->
+    <link rel="stylesheet" href="css/countdown/jquery.countdown.css" type="text/css">
     <!-- Magnific Popup -->
-    <!-- <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css" type="text/css"> -->
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css" type="text/css">
     <!-- Owl Carousel -->
-    <!-- <link rel="stylesheet" href="css/owlcarousel/owl.carousel.css" type="text/css"> -->
-    <!-- <link rel="stylesheet" href="css/owlcarousel/owl.theme.css" type="text/css"> -->
-    <!-- Icon -->
-    <!-- <link rel="stylesheet" href="css/fonts/fontello/css/fontello.css" type="text/css" media="screen" /> -->
-    <!-- Font -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'> -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'> -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'> -->
-
-    <!-- Theme CSS -->
-    <!-- <link href="css/style.css" rel="stylesheet" media="screen"> -->
-    <!-- endbuild -->
-
+    <link rel="stylesheet" href="css/owlcarousel/owl.carousel.css" type="text/css">
+    <link rel="stylesheet" href="css/owlcarousel/owl.theme.css" type="text/css">
     <!-- Icon -->
     <link rel="stylesheet" href="css/fonts/fontello/css/fontello.css" type="text/css" media="screen" />
     <!-- Font -->
@@ -44,7 +31,13 @@
     <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="./dist/main.min.css">
+    <!-- Theme CSS -->
+    <link href="css/style.css" rel="stylesheet" media="screen">
+
+    <!-- Skin CSS -->
+    <!-- <link href="css/skin/light-teal/light-teal.css" rel="stylesheet" media="screen"> -->
+    <!-- <link href="css/skin/light-teal/light-teal-reverse-navbar.css" rel="stylesheet" media="screen"> -->
+    <!--link href="css/skin/pattern/pattern-1.css" rel="stylesheet" media="screen"-->
 
   </head>
 
@@ -276,6 +269,7 @@
                     </div>
                   </div>
                 </div>
+         
                 <!--END of ICON LINK-->
 
               </div>
@@ -381,8 +375,8 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">2012</div>
-                <div class="month-year">7/25</div>
+                <div class="date-only">25</div>
+                <div class="month-year">07.12</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -438,8 +432,8 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">2012</div>
-                <div class="month-year">7/27</div>
+                <div class="date-only">27</div>
+                <div class="month-year">07.12</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -495,8 +489,8 @@
             <div class="col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">2015</div>
-                <div class="month-year">12/25</div>
+                <div class="date-only">25</div>
+                <div class="month-year">12.15</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -553,8 +547,8 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">2015</div>
-                <div class="month-year">12/25</div>
+                <div class="date-only">25</div>
+                <div class="month-year">12.15</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
@@ -777,7 +771,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/296862_10151049517159103_214249417_n_mkcbdj.jpg" class="magnific-zoom-gallery" title="Our first party together at Paola & Vincent's">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/296862_10151049517159103_214249417_n_mkcbdj.jpg" class="magnific-zoom-gallery" title="Our first party (at Paola&Vincent)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -811,7 +805,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom-gallery" title="Celebrating New Years Eve 2014 at Sweet Water">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom-gallery" title="Celebrating New Year 2014 (at Sweet Water)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -845,7 +839,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north_west/DSC00212_ze7qzd.jpg" class="magnific-zoom-gallery" title="Our first trip to Asheville, NC visiting the Biltmore">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north_west/DSC00212_ze7qzd.jpg" class="magnific-zoom-gallery" title="Our first trip to Ashville, NC (at Biltmore)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -879,7 +873,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip, first Christmas and first New Year Together in 2013 visiting San Francisco, CA">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip,fisrt Christmas and New Year 2013 (San Francisco, CA)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -913,7 +907,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ! (Williamsburg)">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ (Williamsburg)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -947,7 +941,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02184_fzllcw.jpg" class="magnific-zoom-gallery" title="Celebrating our 2nd anniversary of meeting in NYC, 7/25/2014">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02184_fzllcw.jpg" class="magnific-zoom-gallery" title="Celebrating Two-Year Anniversary since we met each other, July 25th, 2014 (NYC)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -981,7 +975,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02788_fdcasc.jpg" class="magnific-zoom-gallery" title="Irina's Graduation 1/21/2016 in NYC">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02788_fdcasc.jpg" class="magnific-zoom-gallery" title="Irina's Graduation January 21st, 2016 (NYC)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1805,7 +1799,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_face,h_325,w_293/v1456372207/P_Gonzalez_-1094_ct5ssz.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1817,7 +1811,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_face,h_325,w_293/v1456372207/P_Gonzalez_-1094_ct5ssz.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -2186,51 +2180,47 @@
       </div>
     </footer>
 
-    <!--build:js main.min.js -->
+
     <!-- jQuery -->
-    <!-- <script src="js/jquery-1.11.1.min.js"></script> -->
+    <script src="js/jquery-1.11.1.min.js"></script>
     <!-- Pace -->
-    <!-- <script src="js/pace/pace.min.js"></script> -->
+    <script src="js/pace/pace.min.js"></script>
     <!-- Bootstrap -->
-    <!-- <script src="js/bootstrap/bootstrap.js"></script> -->
+    <script src="js/bootstrap/bootstrap.js"></script>
     <!-- Modernizr -->
-    <!-- <script src="js/modernizr/modernizr.js"></script> -->
+    <script src="js/modernizr/modernizr.js"></script>
     <!-- Device JS -->
-    <!-- <script src="js/devicejs/device.js"></script> -->
+    <script src="js/devicejs/device.js"></script>
     <!-- TinyNav -->
-    <!-- <script src="js/tinynav/tinynav.min.js"></script> -->
+    <script src="js/tinynav/tinynav.min.js"></script>
     <!-- SmoothScroll -->
-    <!-- <script src="js/smoothscroll/jquery.smooth-scroll.js"></script> -->
+    <script src="js/smoothscroll/jquery.smooth-scroll.js"></script>
     <!-- Flexslider -->
-    <!-- <script src="js/flexslider/jquery.flexslider.js"></script> -->
+    <script src="js/flexslider/jquery.flexslider.js"></script>
     <!-- Sticky -->
-    <!-- <script src="js/sticky/jquery.sticky.js"></script> -->
+    <script src="js/sticky/jquery.sticky.js"></script>
     <!-- Waypoint -->
-    <!-- <script src="js/waypoint/jquery.waypoints.min.js"></script> -->
+    <script src="js/waypoint/jquery.waypoints.min.js"></script>
     <!-- DoubleTapToGo -->
-    <!-- <script src="js/jquery-ui-widget/jquery.ui.widget.js"></script> -->
-    <!-- <script src="js/jquery-doubletaptogo/jquery.dcd.doubletaptogo.js"></script> -->
+    <script src="js/jquery-ui-widget/jquery.ui.widget.js"></script>
+    <script src="js/jquery-doubletaptogo/jquery.dcd.doubletaptogo.js"></script>
     <!-- Vide -->
-    <!-- <script src="js/vide/jquery.vide.js"></script> -->
+    <script src="js/vide/jquery.vide.js"></script>
     <!-- Stellar -->
-    <!-- <script src="js/stellar/jquery.stellar.js"></script> -->
+    <script src="js/stellar/jquery.stellar.js"></script>
     <!-- Masonry -->
-    <!-- <script src="js/masonry/masonry.pkgd.min.js"></script> -->
+    <script src="js/masonry/masonry.pkgd.min.js"></script>
     <!-- Countdown -->
-    <!-- <script src="js/countdown/jquery.plugin.js"></script> -->
-    <!-- <script src="js/countdown/jquery.countdown.js"></script> -->
+    <script src="js/countdown/jquery.plugin.js"></script>
+    <script src="js/countdown/jquery.countdown.js"></script>
     <!-- Magnific Popup -->
-    <!-- <script src="js/magnific-popup/jquery.magnific-popup.js"></script> -->
+    <script src="js/magnific-popup/jquery.magnific-popup.js"></script>
     <!-- Owl Carousel -->
-    <!-- <script src="js/owlcarousel/owl.carousel.js"></script> -->
-    <!-- RSVP -->
-    <!-- <script src="js/rsvp/rsvp.js"></script> -->
-    <!-- endbuild -->
-
-    <script src="dist/main.min.js"></script>
-
+    <script src="js/owlcarousel/owl.carousel.js"></script>
     <!-- Google Map -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+    <!-- RSVP -->
+    <script src="js/rsvp/rsvp.js"></script>
 
     <!-- Custom Core Script -->
     <script type="text/javascript" src="js/script.js"></script>
