Add Brent picture. Change package to grempe.

--- a/public/index.html
+++ b/public/index.html
@@ -1492,8 +1492,8 @@
                 <!--PHOTO-ITEM-->
                 <div class="photo-item frame-border animation fadeIn">
 
-                  <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <!--PHOTO BRENT-->
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1456716276/IMG_7565_ojvpuw.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1505,7 +1505,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1456716276/IMG_7565_ojvpuw.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
