Revert "Add new Irina's picture"
This reverts commit f0e253282e545e6e5b98d75cef8a4702a1414e5f.

--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@
               <div class="photo-item frame-border animation fadeInRight">
 
                 <!--PHOTO-->
-                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_458,w_458/v1456373587/421162_10150519502374103_594289650_n_pvz2xz.jpg" alt="" class="hover-animation image-zoom-in">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_458,h_458,c_fill/IMG_3908_i4agol.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -260,7 +260,7 @@
                 <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
                   <div class="alignment">
                     <div class="v-align center-middle">
-                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_458,w_458/v1456373587/421162_10150519502374103_594289650_n_pvz2xz.jpg" class="magnific-zoom">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_3908_i4agol.jpg" class="magnific-zoom">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -384,8 +384,8 @@
 
             <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
               <h3>OUR FIRST DATE</h3>
-
-              <p>New York, New York</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
+                mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
             </div>
 
             <div class="vertical-line">
@@ -432,16 +432,17 @@
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
-                <div class="date-only">08</div>
-                <div class="month-year">08.14</div>
+                <div class="date-only">27</div>
+                <div class="month-year">07.12</div>
               </div>
               <div class="arrow-right"></div>
               <div class="clearboth"></div>
             </div>
 
             <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-              <h3>MOVED IN TOGETHER</h3>
-              <p>Williamsburg</p>
+              <h3>OUR FIRST DATE</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
+                mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
             </div>
 
             <div class="vertical-line">
@@ -497,7 +498,8 @@
 
             <div class="col-md-4 animation delay1 fadeInRight">
               <h3>HE PROPOSED</h3>
-              <p>On the rooftop of their apartment.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
+                mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
 
             </div>
 
