Add Irina's Photo

--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
               <div class="photo-item frame-border animation fadeInRight">
 
                 <!--PHOTO-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_458,h_458,c_fill/IMG_3908_i4agol.jpg" alt="" class="hover-animation image-zoom-in">
+                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_458,w_458/v1456373587/421162_10150519502374103_594289650_n_pvz2xz.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -267,7 +267,7 @@
                 <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
                   <div class="alignment">
                     <div class="v-align center-middle">
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_3908_i4agol.jpg" class="magnific-zoom">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_458,w_458/v1456373587/421162_10150519502374103_594289650_n_pvz2xz.jpg" class="magnific-zoom">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
