--- a/public/index.html
+++ b/public/index.html
@@ -390,8 +390,7 @@
 
             <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
               <h3>OUR FIRST DATE</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
-                mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+              <p>New York, New York</p>
             </div>
 
             <div class="vertical-line">
@@ -446,9 +445,8 @@
             </div>
 
             <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-              <h3>OUR FIRST DATE</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
-                mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+              <h3>MOVED IN TOGETHER</h3>
+              <p>Williamsburg</p>
             </div>
 
             <div class="vertical-line">
@@ -504,8 +502,7 @@
 
             <div class="col-md-4 animation delay1 fadeInRight">
               <h3>HE PROPOSED</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
-                mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+              <p>On the rooftop of their apartment.</p>
 
             </div>
 
