Add Matt's Photo

--- a/public/index.html
+++ b/public/index.html
@@ -1541,7 +1541,7 @@
 
 
 
-            <!--GROOMSMEN-5-->
+            <!--GROOMSMEN-5 MATT-->
             <div class="col-md-4">
 
               <!--GROOMSMEN-ITEM-->
@@ -1551,7 +1551,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_west,h_325,w_293/v1457214954/DSC_0006_etaa0v.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1563,7 +1563,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_west,h_325,w_293/v1457214954/DSC_0006_etaa0v.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
