--- a/public/index.html
+++ b/public/index.html
@@ -1671,10 +1671,10 @@
 
               <div class="section-title animation fadeInUp">
                 <h2>THE BRIDESMAIDS</h2>
-                <p>
+                <!--p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
                   faucibus. Proin pulvinar congue ex, vitae
-                </p>
+                </p-->
 
 
               </div>
@@ -2026,8 +2026,7 @@
                               </h2>
 
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
-                  faucibus. Proin pulvinar congue ex, vitae
+                  We've chosen to register with Zola, an easy-to-use registry site that enables us to register for the gifts we want, all in one place. If you'd like to give us a gift on Zola, click the logo below!
                 </p>
 
 
@@ -2041,9 +2040,9 @@
             <div class="col-md-offset-1 col-md-10 text-center">
               <div id="registry-logo" class="owl-carousel">
                 <div class="item">
-                  <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
+                  <a href="https://www.zola.com/registry/timirina"> <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fit,h_67,w_249/v1457224458/logo_ecgdhu.jpg" alt=""> </a>
                 </div>
-                <div class="item">
+                <!--div class="item">
                   <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
                 </div>
                 <div class="item">
@@ -2054,7 +2053,7 @@
                 </div>
                 <div class="item">
                   <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
-                </div>
+                </div-->
               </div>
             </div>
           </div>
