Add Aaron and Nate's Photos

--- a/public/index.html
+++ b/public/index.html
@@ -1393,7 +1393,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1457225916/12232701_10205699854201044_7742782014469890967_o_dc3r6l.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1405,7 +1405,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1457225916/12232701_10205699854201044_7742782014469890967_o_dc3r6l.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1446,7 +1446,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1457225825/644359_10203320090548440_235944966071856398_n_zlelvc.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1458,7 +1458,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1457225825/644359_10203320090548440_235944966071856398_n_zlelvc.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
