--- a/public/index.html
+++ b/public/index.html
@@ -446,7 +446,7 @@
 
             <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
               <h3>MOVED IN TOGETHER</h3>
-              <p>Williamsburg</p>
+              <p> Williamsburg</p>
             </div>
 
             <div class="vertical-line">
@@ -512,23 +512,27 @@
           </div>
           <!-- END of STORY ROW-3 -->
 
-          <!-- STORY ROW-4 -->
-          <div class="row story-row">
 
-            <div class="col-sm-12 col-md-4 col-md-push-6 text-center">
+
+
+
+          <!-- STORY ROW-4 -->
+          <!--div class="row story-row"-->
+
+            <!--div class="col-sm-12 col-md-4 col-md-push-6 text-center"-->
               <!--PHOTO-ITEM-->
-              <div class="photo-item frame-border animation delay1 fadeInLeft">
+              <!--div class="photo-item frame-border animation delay1 fadeInLeft"-->
 
                 <!--PHOTO LOVE RINGS-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_south/IMG_7401_gvrkns.jpg" alt="" class="hover-animation image-zoom-in">
+                <!--img src="https://res.cloudinary.com/dlpep2th5/image/upload/w_290,h_290,c_fill,g_south/IMG_7401_gvrkns.jpg" alt="" class="hover-animation image-zoom-in"-->
 
                 <!--PHOTO OVERLAY-->
-                <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                </div>
+                <!--div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                </div-->
                 <!--END of PHOTO OVERLAY-->
 
                 <!--ICON LINK-->
-                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                <!--div class="layer wh100 hidden-link hover-animation delay1 fade-in">
                   <div class="alignment">
                     <div class="v-align center-middle">
 
@@ -540,12 +544,13 @@
 
                     </div>
                   </div>
-                </div>
+                </div-->
                 <!--END of ICON LINK-->
 
-              </div>
+              <!--/div-->
               <!--END of PHOTO-ITEM-->
-            </div>
+          
+            <!--/div>
 
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
@@ -566,8 +571,13 @@
             <div class="vertical-line">
             </div>
 
-          </div>
+          </div-->
           <!-- END of STORY ROW-4 -->
+
+
+
+
+
 
           <div class="row">
             <div class="col-md-12 text-center">
@@ -1315,10 +1325,10 @@
 
               <div class="section-title animation fadeInUp">
                 <h2>THE GROOMSMEN</h2>
-                <p>
+                <!--p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
                   faucibus. Proin pulvinar congue ex, vitae
-                </p>
+                </p-->
 
 
               </div>
@@ -1340,7 +1350,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_face,h_325,w_293/v1457226663/10264926_10101388292193477_7553672162660885383_n_i7twmw.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1352,7 +1362,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_face,h_325,w_293/v1457226663/10264926_10101388292193477_7553672162660885383_n_i7twmw.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
