--- a/public/index.html
+++ b/public/index.html
@@ -407,7 +407,7 @@
               <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                 <!--PHOTO OUR FIRST DATING-->
-                <img src="https://placehold.it/290x290" alt="" class="hover-animation image-zoom-in">
+                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_east,h_290,w_290/v1457228536/IMG_0170_hsqmf1.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -419,7 +419,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://placehold.it/700x467" class="magnific-zoom" title="Our First Date">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1457228536/IMG_0170_hsqmf1.jpg" class="magnific-zoom" title="Our First Date">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -550,9 +550,9 @@
               <!--/div-->
               <!--END of PHOTO-ITEM-->
           
-            <!--/div>
+            <!--/div-->
 
-            <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
+           <!--  <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
               <div class="arrow-left"></div>
               <div class="story-date">
                 <div class="date-only">2015</div>
@@ -569,11 +569,10 @@
             </div>
 
             <div class="vertical-line">
-            </div>
+            </div> -->
 
-          </div-->
+          <!--/div-->
           <!-- END of STORY ROW-4 -->
-
 
 
 
@@ -886,7 +885,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip, first Christmas and first New Year Together in 2013 visiting San Francisco, CA">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1457235600/IMG_6391_ds9qeg.jpg" class="magnific-zoom-gallery" title="First trip, first Christmas and first New Year Together in 2013 visiting San Francisco, CA">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -920,7 +919,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ! (Williamsburg)">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,w_1000/v1457236296/DSC01348_af3xdm.jpg" class="magnific-zoom-gallery" title="We love BBQ! (Williamsburg)">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -954,7 +953,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02184_fzllcw.jpg" class="magnific-zoom-gallery" title="Celebrating our 2nd anniversary of meeting in NYC, 7/25/2014">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1457235738/DSC02184_fzllcw.jpg" class="magnific-zoom-gallery" title="Celebrating our 2nd anniversary of meeting in NYC, 7/25/2014">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -988,7 +987,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/w_700,h_467,c_fill,g_north/DSC02788_fdcasc.jpg" class="magnific-zoom-gallery" title="Irina's Graduation 1/21/2016 in NYC">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fit,w_1000/v1457235876/DSC02788_fdcasc.jpg" class="magnific-zoom-gallery" title="Irina's Graduation 1/21/2016 in NYC">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1010,7 +1009,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO-->
-                <img src="https://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_290,w_290/v1456109520/dsc_4348_25120170405_o_sfminc.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1022,7 +1021,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://placehold.it/700x467" class="magnific-zoom-gallery" title="Attachment-8">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1456109520/dsc_4348_25120170405_o_sfminc.jpg" class="magnific-zoom-gallery" title="Engagment photo, January 2016 - Brooklyn, NY">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1044,7 +1043,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO-->
-                <img src="https://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,g_faces,h_290,w_290/v1453521598/IMG_5123_h0dab3.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1056,7 +1055,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://placehold.it/700x467" class="magnific-zoom-gallery" title="Attachment-9">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1453521598/IMG_5123_h0dab3.jpg" class="magnific-zoom-gallery" title="One year anniverary - Cruise On Hudson River, July 27th, 2013">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1308,7 +1307,7 @@
       <!-- PHOTO DIVIDER -->
       <section id="photo-divider-2">
         <div id="date-countdown" class="circle-countdown animation fadeInUp"></div>
-        <div class="image-divider fixed-height" style="background-image:url(https://res.cloudinary.com/dlpep2th5/image/upload/w_1920,h_1080,c_fill/DSC01325_p2gumk.jpg); height:450px" data-stellar-background-ratio="0.3">
+        <div class="image-divider fixed-height" style="background-image:url(http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_1080,w_1920/v1456109520/dsc_4348_25120170405_o_sfminc.jpg); height:450px" data-stellar-background-ratio="0.3">
         </div>
       </section>
 
