Remove 6th groomesmen

--- a/public/her.html
+++ b/public/her.html
@@ -58,3 +58,61 @@
         </div><!--End of CONTENT-->
         
     </div><!--End of POPUP TEMPLATE 1-->
+
+
+
+
+
+
+
+    TEMP
+    <!--GROOMSMEN-6-->
+            <div class="col-md-4">
+
+              <!--GROOMSMEN-ITEM-->
+              <div class="groomsmen-item">
+
+                <!--PHOTO-ITEM-->
+                <div class="photo-item frame-border animation fadeIn">
+
+                  <!--PHOTO-->
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+
+                  <!--PHOTO OVERLAY-->
+                  <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                  </div>
+                  <!--END of PHOTO OVERLAY-->
+
+                  <!--ICON LINK-->
+                  <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                    <div class="alignment">
+                      <div class="v-align center-middle">
+
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                          <div class="de-icon circle light medium-size inline">
+                            <i class="de-icon-zoom-in"></i>
+                          </div>
+                        </a>
+
+                      </div>
+                    </div>
+                  </div>
+                  <!--END of ICON LINK-->
+
+                </div>
+                <!--END of PHOTO-ITEM-->
+
+                <!-- TITLE & EXCERPT -->
+                <div class="title-excerpt animation fadeIn text-center">
+
+                  <h3 class="no-margin">Glenn Rempe</h3>
+                  <p>IRINA'S BROTHER IN-LAW</p>
+
+                </div>
+                <!-- END of TITLE & EXCERPT -->
+
+              </div>
+              <!--END of GROOMSMEN-ITEM-->
+
+            </div>
+            <!--END of GROOMSMEN-6-->
