--- a/public/index.html
+++ b/public/index.html
@@ -1603,56 +1603,7 @@
 
 
 
-            <!--GROOMSMEN-6-->
-            <div class="col-md-4">
-
-              <!--GROOMSMEN-ITEM-->
-              <div class="groomsmen-item">
-
-                <!--PHOTO-ITEM-->
-                <div class="photo-item frame-border animation fadeIn">
-
-                  <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
-
-                  <!--PHOTO OVERLAY-->
-                  <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                  </div>
-                  <!--END of PHOTO OVERLAY-->
-
-                  <!--ICON LINK-->
-                  <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                    <div class="alignment">
-                      <div class="v-align center-middle">
-
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
-                          <div class="de-icon circle light medium-size inline">
-                            <i class="de-icon-zoom-in"></i>
-                          </div>
-                        </a>
-
-                      </div>
-                    </div>
-                  </div>
-                  <!--END of ICON LINK-->
-
-                </div>
-                <!--END of PHOTO-ITEM-->
-
-                <!-- TITLE & EXCERPT -->
-                <div class="title-excerpt animation fadeIn text-center">
-
-                  <h3 class="no-margin">Glenn Rempe</h3>
-                  <p>IRINA'S BROTHER IN-LAW</p>
-
-                </div>
-                <!-- END of TITLE & EXCERPT -->
-
-              </div>
-              <!--END of GROOMSMEN-ITEM-->
-
-            </div>
-            <!--END of GROOMSMEN-6-->
+            
 
           </div>
           <!-- END of ROW-2 -->
@@ -1663,7 +1614,7 @@
 
       <!-- PHOTO DIVIDER -->
       <section id="photo-divider-3">
-        <div class="image-divider fixed-height" style="background-image:url(https://placehold.it/1920x1080); height:450px" data-stellar-background-ratio="0.3">
+        <div class="image-divider fixed-height" style="background-image:url(http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_1080,w_1920/v1457236869/dsc_4309_25002007052_o_c4bpqu.jpg); height:750px" data-stellar-background-ratio="0.3">
         </div>
       </section>
 
