Move label zola to the center

--- a/public/index.html
+++ b/public/index.html
@@ -1643,6 +1643,11 @@
           <!-- END of ROW-1 -->
 
 
+
+
+
+
+
           <!-- ROW-2 -->
           <div class="row">
 
@@ -1997,9 +2002,9 @@
 
           <!-- ROW-1 -->
           <div class="row">
-            <div class="col-md-offset-1 col-md-10 text-center">
-              <div id="registry-logo" class="owl-carousel">
-                <div class="item">
+            <!--div class="col-md-offset-1 col-md-10 text-center"-->
+              <!--div id="registry-logo" class="owl-carousel"-->
+                <div align="center" class="item">
                   <a href="https://www.zola.com/registry/timirina"> <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fit,h_67,w_249/v1457224458/logo_ecgdhu.jpg" alt=""> </a>
                 </div>
                 <!--div class="item">
@@ -2014,8 +2019,8 @@
                 <div class="item">
                   <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
                 </div-->
-              </div>
-            </div>
+              <!--/div-->
+            <!--/div-->
           </div>
 
         </div>
