Add Vandi Vaz Cohen photo

--- a/public/index.html
+++ b/public/index.html
@@ -1863,7 +1863,7 @@
 
 
 
-            <!--BRIDESMAID-5-->
+            <!--BRIDESMAID-5-Vandi Vaz Cohen-->
             <div class="col-md-4">
 
               <!--BRIDESMAID-ITEM-->
@@ -1873,7 +1873,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1459023637/IMG_3260_d2gzg6.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1885,7 +1885,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1459023637/IMG_3260_d2gzg6.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1902,7 +1902,7 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin">SOMEONE</h3>
+                  <h3 class="no-margin">Vandi Vaz Cohen</h3>
                   <p>FRIEND</p>
 
                 </div>
