--- a/public/index.html
+++ b/public/index.html
@@ -641,7 +641,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="border-column">
-                      <h3>FOUR O'CLOCK IN THE AFTERNOON</h3>
+                      <h3>THREE THIRTY O'CLOCK IN THE AFTERNOON</h3>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -667,7 +667,7 @@
               </div>
 
               <h3 class="inline">CEREMONY</h3>
-              <p>The wedding ceremony will take place promptly at 4pm near the beautiful
+              <p>The wedding ceremony will take place promptly at 3:30PM near the beautiful
                 former private residence known as 'The Ridge'. It is approximately 26
                 miles and a 35 minute drive to The Ridge from downtown Asheville. Please
                 plan on departing for 'The Ridge' at least one hour prior to the ceremony.
@@ -687,7 +687,7 @@
               </div>
               <h3 class="inline">RECEPTION</h3>
               <p>The wedding reception will take place in downtown Asheville
-                starting at 6:30 PM following the ceremony and cocktails.
+                starting at 7PM following the ceremony and cocktails.
               </p>
 
               <p>We hope you'll join us downstairs at Pack's Tavern when midnight strikes!</p>
@@ -1294,6 +1294,63 @@
 
                 </div>
                 <!--END of ITEM-3-->
+
+                <!-- ITEM-4 -->
+                <div class="item">
+
+                  <!--PHOTO-ITEM-->
+                  <div class="photo-item animation fadeIn">
+
+                    <!--PHOTO-->
+                    <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_533,w_800/v1460846435/clinical-patient-travel_yybv9e.jpg" alt="" class="hover-animation image-zoom-in">
+
+                    <!--PHOTO OVERLAY-->
+                    <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                    </div>
+                    <!--END of PHOTO OVERLAY-->
+
+                    <!--ICON LINK-->
+                    <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
+                      <div class="alignment">
+                        <div class="v-align center-middle">
+
+                          <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_533,w_800/v1460846435/clinical-patient-travel_yybv9e.jpg" class="magnific-zoom" title="Pack's Tavern, The Century Room">
+                            <div class="de-icon circle light medium-size inline">
+                              <i class="de-icon-zoom-in"></i>
+                            </div>
+                          </a>
+
+                          <a href="http://packstavern.com/centuryroom/">
+                            <div class="de-icon circle light medium-size inline">
+                              <i class="de-icon-link"></i>
+                            </div>
+                          </a>
+
+                        </div>
+                      </div>
+                    </div>
+                    <!--END of ICON LINK-->
+
+                  </div>
+                  <!--END of PHOTO-ITEM-->
+
+                  <!-- TITLE & EXCERPT -->
+                  <div class="title-excerpt animation fadeIn">
+
+                    <h3>TRAVEL ADVICE</h3>
+                    <p>Asheville has it's own regional airport (AVL) , however, more flight times and cheaper flights can be found out of Charlotte (CLT) or Greenville (GSP). Charlotte is a short two hours to the east. Greenville is just over an hour south. </p>
+                  </div>
+                  <!-- END of TITLE & EXCERPT -->
+
+                </div>
+                <!--END of ITEM-4-->
+
+
+
+
+
+
+
 
               </div>
               <!--END of EVENTS CAROUSEL-->
