Edit info about the rehearsal dinner

--- a/public/index.html
+++ b/public/index.html
@@ -703,7 +703,7 @@
                 <i class="de-icon-food"></i>
               </div>
               <h3 class="inline">REHEARSAL DINNER - 6:30PM </h3>
-              <p>Please join us for traditional North Carolina style BBQ that will take place in Tim's House
+              <p>Everybody's welcome to join us for traditional North Carolina style BBQ that will take place in Tim's House
                 starting at 6:30PM following cocktails, local beer, and bonfire.
               </p>
 
@@ -1403,6 +1403,7 @@
                 </div>
                 <!--END of ITEM-3-->
 
+               
                 <!-- ITEM-4 -->
                 <div class="item">
 
@@ -1452,13 +1453,6 @@
 
                 </div>
                 <!--END of ITEM-4-->
-
-
-
-
-
-
-
 
               </div>
               <!--END of EVENTS CAROUSEL-->
