Add Tamara's photo

--- a/public/index.html
+++ b/public/index.html
@@ -2022,7 +2022,7 @@
 
 
 
-            <!--BRIDESMAID-5-Vandi Vaz Cohen-->
+            <!--BRIDESMAID-5-Tamara Osovskaya-->
             <div class="col-md-4">
 
               <!--BRIDESMAID-ITEM-->
@@ -2032,7 +2032,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1459023637/IMG_3260_d2gzg6.jpg" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1466865940/10294331_10207372551366548_4241130374744788930_n_y0ud42.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -2044,7 +2044,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1459023637/IMG_3260_d2gzg6.jpg" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_325,w_293/v1466865940/10294331_10207372551366548_4241130374744788930_n_y0ud42.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -2061,7 +2061,7 @@
                 <!-- TITLE & EXCERPT -->
                 <div class="title-excerpt animation fadeIn text-center">
 
-                  <h3 class="no-margin">Vandi Vaz Cohen</h3>
+                  <h3 class="no-margin">Tamara Osovskaya</h3>
                   <p>FRIEND</p>
 
                 </div>
